--- a/임은진/LottoGenerator/build.gradle
+++ b/임은진/LottoGenerator/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc18'
 }
 
 tasks.named('test') {
