--- a/최준홍/Hello/src/main/resources/application.yml
+++ b/최준홍/Hello/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/board?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-    username: root
-    password: ^wns28056825
+    username: jpa_test
+    password: ^thwn1wks
 
 
   jpa:
