--- a/최준홍/Hello/build.gradle
+++ b/최준홍/Hello/build.gradle
@@ -23,17 +23,18 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-//	runtimeOnly 'mysql:mysql-connector-java'
+//
+////	runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
+//
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-// test에서 lombok 사용
+//// test에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
-// debugging sql 확인용
+//// debugging sql 확인용
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
 }
 
